changed the background again as well as edited some of the project names

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         </div>
     <div class="projects">
             <ul>
-                <li><a rel="noopener noreferrer" href="https://github.com/abhiyam/Mushroom-Edibility" target="_blank" >Mushroom Edibility</a></li>
+                <li><a rel="noopener noreferrer" href="https://github.com/abhiyam/Mushroom-Edibility" target="_blank" >Mushroom Edibility Classification</a></li>
                 <li><a rel="noopener noreferrer" href="https://github.com/abhiyam/car-prices-predictor" target="_blank">Car Prices Predictor</a></li>
                 <li><a rel="noopener noreferrer" href="https://github.com/abhiyam/Water-Potability" target="_blank"> Water Potability</a></li>
                 <li><a rel="noopener noreferrer" href="https://github.com/abhiyam/ChordStorm" target="_blank">ChordStorm</a></li>
